Update manifest.json description and remove update_url

--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,14 @@
 {
-  "update_url": "https://clients2.google.com/service/update2/crx",
-
   "manifest_version": 3,
   "name": "Smart Zetamac Coach",
   "version": "1.0.0",
-  "description": "Analyze your Zetamac arithmetic performance and get personalized coaching to improve your mental math speed and accuracy.",
+  "description": "Track your Zetamac arithmetic performance",
   "permissions": [
     "activeTab",
     "storage"
   ],
   "host_permissions": [
     "https://*.zetamac.com/*",
-    "https://*.googleapis.com/*",
-    "https://*.gstatic.com/*",
     "https://script.google.com/*",
     "https://script.googleusercontent.com/*"
   ],
@@ -29,11 +25,5 @@
   ],
   "background": {
     "service_worker": "index.js"
-  },
-  "web_accessible_resources": [
-    {
-      "resources": ["firebase-config.js"],
-      "matches": ["<all_urls>"]
-    }
-  ]
-} 
+  }
+}
